--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ grpcio==1.43.0
 grpcio-status==1.43.0
 httplib2==0.20.2
 idna==3.3
+instamojo-wrapper==1.2.0
 msgpack==1.0.3
 packaging==21.3
 Pillow==8.4.0
@@ -35,5 +36,6 @@ requests==2.26.0
 rsa==4.8
 six==1.16.0
 sqlparse==0.4.2
+tzdata==2021.5
 uritemplate==4.1.1
 urllib3==1.26.7
